# flaskr

./: .coverage  .gitignore  pyproject.toml
flaskr/: __init__.py  auth.py  db.py
flaskr/static/: style.css
tests/: conftest.py  test_auth.py  test_db.py
